--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rishav-chanda-portfolio",
+  "name": "Manasvi-portfolio",
   "version": "0.1.0",
-  "homepage": "https://rishavchanda.github.io",
+  "homepage": " https://manasvi-palutla.github.io/Portfolio/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
